# GPUI-PDF-Reader

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: quality.yml
apps/gpui-pdf-reader/: Cargo.toml  build.rs
apps/gpui-pdf-reader/src/: annotations.rs  app_extensions.rs  application_host.rs  backend.rs  control_bar.rs  document_jump.rs  extension_assets.rs  extension_packages.rs  extension_registry.rs  floating_panel.rs  link_preview.rs  link_preview_disabled.rs  link_resolution.rs  main.rs  markdown_editor.rs  native_gestures.rs  pdf_capability_bridge.rs  qa.rs  qa_resources.rs  reader.rs  scholarly.rs  scholarly_disabled.rs  scientific.rs  system_resources.rs  text_field.rs  theme.rs  workspace_window.rs
apps/gpui-pdf-reader/src/backend/: client.rs  mod.rs  pdfium_engine.rs  protocol.rs  worker.rs
apps/gpui-pdf-reader/src/backend/worker/: engine.rs  tests.rs
apps/gpui-pdf-reader/src/reader/: annotation_io.rs  comments.rs  control_bar.rs  extensions.rs  qa.rs  references.rs  render.rs  search.rs  tests.rs  toc.rs  ui.rs
assets/themes/: README.md  gpui-component.json
assets/ui/: key-glass.json
assets/ui/variations/: adventure-safari.json  clear-glass.json  safari-chrome.json  safari-glass.json  square-opaque.json
crates/key-editor-core/: Cargo.toml
crates/key-editor-core/src/: lib.rs
crates/key-editor-core/tests/: public_contract.rs
crates/key-editor-gpui/: Cargo.toml
crates/key-editor-gpui/src/: actions.rs  config.rs  editor.rs  lib.rs  projection.rs
crates/key-extension-api/: Cargo.toml  README.md
crates/key-extension-api/src/: capability.rs  id.rs  lib.rs  manifest.rs  protocol.rs  ui.rs  validation.rs  value.rs
crates/key-extension-api/tests/: contracts.rs  wit_contract.rs
crates/key-extension-api/wit/v0.1.0/: extension-api.wit
crates/key-extension-gpui/: Cargo.toml
crates/key-extension-gpui/src/: icon.rs  lib.rs  menu.rs  safe_markdown.rs  state.rs  view.rs
crates/key-extension-host/: Cargo.toml
crates/key-extension-host/src/: diagnostic.rs  host.rs  lib.rs  native.rs  registry.rs  services.rs
crates/key-extension-package/: Cargo.toml
crates/key-extension-package/src/: digest.rs  lib.rs  loader.rs  package.rs  signature.rs  tests.rs
crates/key-extension-wasm/: Cargo.toml
crates/key-extension-wasm/examples/: build_reference_extensions.rs
crates/key-extension-wasm/src/: config.rs  diagnostic.rs  host_adapter.rs  lib.rs  runtime.rs  worker.rs
crates/key-extension-wasm/tests/: reference_packages.rs  runtime.rs  wit_contract.rs
crates/key-extension-wasm/wit/: extension.wit
crates/key-pdf-core/: Cargo.toml
crates/key-pdf-core/src/: annotations.rs  lib.rs  model.rs  navigation_focus.rs  scientific.rs  search.rs
crates/key-pdf-extension-api/: Cargo.toml  README.md
crates/key-pdf-extension-api/src/: capability.rs  error.rs  handle.rs  lib.rs  navigation.rs  overlay.rs  service.rs  snapshot.rs  validation.rs
crates/key-pdf-extension-api/tests/: contracts.rs  validation.rs  wit_contract.rs
crates/key-pdf-extension-api/wit/v0.1.0/: pdf-extension.wit
crates/key-pdf-gpui/: Cargo.toml
crates/key-pdf-gpui/src/: canvas.rs  canvas_model.rs  controller.rs  gpui_adapter.rs  lib.rs  planning.rs
crates/key-pdf-gpui/tests/: canvas_contract.rs  viewport_contract.rs
crates/key-pdf-runtime/: Cargo.toml
crates/key-pdf-runtime/src/: cache.rs  cancellation.rs  demand.rs  engine.rs  lib.rs  scheduler.rs  session.rs  supervisor.rs
crates/key-pdf-runtime/src/supervisor/: tests.rs
crates/key-pdfium/: Cargo.toml
crates/key-pdfium/src/: lib.rs  ops.rs
crates/key-safe-http/: Cargo.toml
crates/key-safe-http/src/: cache.rs  cancellation.rs  client.rs  error.rs  (+5 more)
crates/key-sidecar-store/: Cargo.toml
crates/key-sidecar-store/src/: extension.rs  json.rs  lib.rs  memory.rs  service.rs  store.rs
crates/key-ui-core/: Cargo.toml
crates/key-ui-core/src/: lib.rs
crates/key-ui-gpui/: Cargo.toml
crates/key-ui-gpui/src/: context_bar.rs  control_bar_layout.rs  controls.rs  hover_card.rs  lib.rs  panel.rs  style.rs  tabs.rs  theme.rs  transition.rs
crates/key-workspace-core/: Cargo.toml
extensions/: README.md
extensions/key-pdf-toc/: Cargo.toml  README.md
extensions/key-pdf-toc/src/: lib.rs
extensions/key-reference/: Cargo.toml
extensions/key-reference/src/: executor.rs  lib.rs  link_preview.rs  registry_preview.rs  scholarly.rs
extensions/reference-adversarial-loop/: README.md
extensions/reference-document-statistics/: README.md
extensions/reference-native-escape/: README.md
extensions/reference-theme-pack/: README.md
notes/: annotations-search-comments.md  architecture.md  build-artifacts.md  build-history.md  extension-api-policy.md  extension-threat-model.md  gpui-metal.md  gpui-ui.md  installable-extension-architecture.md  licensing.md  links-and-scientific-references.md  pdf-engine-supervisor-integration.md  pdfium.md  refactor-implementation-status.md  resource-tracing.md  roadmap.md  scheduling-and-zoom.md  testing.md  text-layer.md  workspace-extension-refactor-prd.md  workspace-reorganisation-plan.md
packaging/macos/: Info.plist
scripts/: audit-boundaries.sh  audit-licenses.sh  create-scientific-test-pdf.rs  create-test-pdf.rs  fetch-pdfium.sh  generate-bundle-notices.py  package-macos-app.sh  test-macos-bundle.sh  test.sh  verify-macos-app.sh
src/: annotations.rs  backend.rs  comment_editor.rs  document_jump.rs  link_preview.rs  link_resolution.rs  main.rs  markdown_editor.rs  model.rs  native_gestures.rs  navigation_focus.rs  reader.rs  scholarly.rs  scientific.rs  search.rs  text_field.rs  theme.rs
src/backend/: pdfium_engine.rs
src/markdown_editor/: model.rs
src/reader/: animation.rs
tests/e2e/: macos_annotation_ownership.sh  macos_control_bar.sh  macos_extensions.sh  macos_features.sh  macos_fluid.sh  macos_link_previews.sh  macos_links.sh  macos_multiwindow.sh  macos_open_dialog.sh  macos_resource_scale.sh  macos_resources.sh  macos_scientific.sh  macos_split_view.sh  macos_tab_drag.sh  macos_tabs.sh  macos_themes.sh  macos_toc.sh  macos_zoom.sh
(+18 files in other folders)
