[package]
name = "gpui-pdf-reader"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A fast native PDF reader built with GPUI and PDFium"

[dependencies]
image = { version = "0.25.1", default-features = false }
key-editor-core = { path = "crates/key-editor-core" }
key-pdf-core = { path = "crates/key-pdf-core" }
open = "5.4.0"
pdfium-render = { version = "=0.9.2", default-features = false, features = ["pdfium_7763"] }
reqwest = { package = "zed-reqwest", version = "=0.12.15-zed", default-features = false, features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.24.0"
url = "2.5.8"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { version = "0.6.2", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "block2", "NSEvent"] }
gpui = { version = "0.2.2", default-features = false, features = ["font-kit", "macos-blade"] }
gpui-component = "=0.5.1"
gpui-component-assets = "=0.5.1"

[patch.crates-io]
pdfium-render = { path = "vendor/pdfium-render-tile" }
# GPUI 0.2.2 predates zed-industries/zed#38269. Backport that upstream
# Apache-2.0 fix so a macOS screen change also synchronizes the CAMetalLayer's
# scale factor and drawable size instead of leaving stale display state.
gpui = { path = "vendor/gpui-0.2.2-display-fix" }
# GPUI 0.2.2 declares MPL-licensed cbindgen even when its Blade renderer makes
# the generator unreachable. This tiny, original compatibility crate supplies
# the compile-time API only; none of it runs in the selected configuration.
cbindgen = { path = "vendor/cbindgen-compat" }
# zed-font-kit uses dirs on macOS; dirs declares this MPL-only utility. This
# independently written MIT implementation supplies its three-method API.
option-ext = { path = "vendor/option-ext-compat" }
# zed-font-kit also declares the MPL-only dwrote package for Windows. GPUI PDF Reader
# is macOS-only, so this MIT placeholder is never compiled, but keeps even the
# resolved lock graph inside the project's license policy.
dwrote = { path = "vendor/dwrote-compat" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
