[workspace]
members = [
    "apps/gpui-pdf-reader",
    "crates/key-editor-core",
    "crates/key-extension-api",
    "crates/key-extension-host",
    "crates/key-pdf-core",
    "crates/key-pdf-runtime",
]
default-members = ["apps/gpui-pdf-reader"]
exclude = [
    "crates/key-extension-gpui",
    "crates/key-extension-package",
    "crates/key-extension-wasm",
    "crates/key-pdfium",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
image = { version = "0.25.1", default-features = false }
open = "5.4.0"
pdfium-render = { version = "=0.9.2", default-features = false, features = ["pdfium_7763"] }
reqwest = { package = "zed-reqwest", version = "=0.12.15-zed", default-features = false, features = ["blocking"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.24.0"
toml = "0.8.23"
url = "2.5.8"

[patch.crates-io]
pdfium-render = { path = "vendor/pdfium-render-tile" }
# GPUI 0.2.2 predates zed-industries/zed#38269. Backport that upstream
# Apache-2.0 fix so a macOS screen change also synchronizes the CAMetalLayer's
# scale factor and drawable size instead of leaving stale display state.
gpui = { path = "vendor/gpui-0.2.2-display-fix" }
# GPUI 0.2.2 declares MPL-licensed cbindgen even when its Blade renderer makes
# the generator unreachable. This tiny, original compatibility crate supplies
# the compile-time API only; none of it runs in the selected configuration.
cbindgen = { path = "vendor/cbindgen-compat" }
# zed-font-kit uses dirs on macOS; dirs declares this MPL-only utility. This
# independently written MIT implementation supplies its three-method API.
option-ext = { path = "vendor/option-ext-compat" }
# zed-font-kit also declares the MPL-only dwrote package for Windows. GPUI PDF
# Reader is macOS-only, so this MIT placeholder is never compiled, but keeps
# even the resolved lock graph inside the project's license policy.
dwrote = { path = "vendor/dwrote-compat" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
