[package]
name = "gpui-pdf-reader"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A fast native PDF reader built with GPUI and PDFium"

[[bin]]
name = "gpui-pdf-reader"
path = "src/main.rs"

[features]
default = ["standard"]
standard = ["installable-extensions", "scholarly-network"]
installable-extensions = ["dep:key-extension-package", "dep:key-extension-wasm"]
scholarly-network = ["dep:key-reference"]

[dependencies]
flume = "0.11.1"
image.workspace = true
key-editor-gpui = { path = "../../crates/key-editor-gpui" }
key-extension-api = { path = "../../crates/key-extension-api" }
key-extension-gpui = { path = "../../crates/key-extension-gpui" }
key-extension-host = { path = "../../crates/key-extension-host" }
key-extension-package = { path = "../../crates/key-extension-package", optional = true }
key-extension-wasm = { path = "../../crates/key-extension-wasm", optional = true }
key-pdf-core = { path = "../../crates/key-pdf-core" }
key-pdf-extension-api = { path = "../../crates/key-pdf-extension-api" }
key-pdf-gpui = { path = "../../crates/key-pdf-gpui" }
key-pdf-runtime = { path = "../../crates/key-pdf-runtime" }
key-pdf-toc = { path = "../../extensions/key-pdf-toc" }
key-pdfium = { path = "../../crates/key-pdfium" }
key-reference = { path = "../../extensions/key-reference", optional = true }
key-sidecar-store = { path = "../../crates/key-sidecar-store" }
key-ui-gpui = { path = "../../crates/key-ui-gpui" }
key-workspace-core = { path = "../../crates/key-workspace-core" }
open.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
url.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { version = "0.6.2", default-features = false, features = ["std"] }
mach2 = "0.4.3"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "block2", "NSAccessibility", "NSEvent", "NSWorkspace"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSProcessInfo"] }
gpui = { version = "0.2.2", default-features = false, features = ["font-kit", "macos-blade"] }
gpui-component = "=0.5.1"
gpui-component-assets = "=0.5.1"

[dev-dependencies]
toml.workspace = true
