[package]
name = "key-extension-api"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Runtime-neutral contracts for Key extensions"

[dependencies]
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
toml = "0.8.23"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
