[package]
name = "key-extension-gpui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Trusted GPUI renderer for constrained Key extension contributions"

[dependencies]
key-extension-api = { path = "../key-extension-api" }
key-extension-host = { path = "../key-extension-host" }

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["font-kit", "macos-blade"] }
gpui-component = "=0.5.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
