[package]
name = "key-ui-gpui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reusable GPUI theme, animation, control, and panel primitives for Key applications"

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["font-kit", "macos-blade"] }
gpui-component = "=0.5.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
